--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -17,3 +17,10 @@
   margin-left: 2%;
   margin-right: 2%;
 }
+
+.loading-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
