--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -47,16 +47,48 @@
   cursor: pointer;
 }
 
+.logout {
+  font-family: 'Roboto';
+  border: 1px solid #000000;
+  color: #000000;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: transparent;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.logout:hover {
+  background-color: orange;
+  color: #ffffff;
+}
+
+.mobile-logout {
+  background-color: transparent;
+  border-width: 0px;
+  cursor: pointer;
+  display: none;
+}
+
 @media screen and (max-width: 767px) {
   .navbar-title {
-    font-size: 20px;
+    font-size: 16px;
   }
 
   .my-orders-para {
-    font-size: 15px;
+    font-size: 13px;
+    display: none;
   }
 
   .cart-icon {
-    font-size: 25px;
+    font-size: 23px;
+  }
+
+  .mobile-logout {
+    display: block;
+  }
+
+  .logout {
+    display: none;
   }
 }
